@@ -1,6 +1,8 @@
 /* Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution */
 package st.redline.stout;
 
+import st.redline.ProtoBlock;
+
 /*
   I don't know what are the types (JSON, XML?) will be available. This implementation is just to illustrate how
   st.redline.stout.Router should be created. This class should be removed and implemented properly.
@@ -22,7 +24,7 @@ public class RouterFactoryImpl implements RouterFactory {
     /*
       type parameter should be used to determine which implementation of the st.redline.stout.ResponseSerializer to be used.
      */
-    public Router create(String requestPathSpec, String type, Block block) {
+    public Router create(String requestPathSpec, String type, ProtoBlock block) {
         return new RouterImpl(TO_STRING_SERIALIZER, block, requestPathSpecificationFactory.create(requestPathSpec));
     }
 }
