@@ -1,6 +1,7 @@
 /* Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution */
 package st.redline.stout;
 
+import st.redline.ProtoBlock;
 import st.redline.ProtoObject;
 
 import java.util.ArrayList;
@@ -17,7 +18,12 @@ public class RouterRegistryImpl implements RouterRegistry {
         this.routerFactory = routerFactory;
     }
 
-    public Router register(String spec, String type, String method, Block block) {
+    public Router register(ProtoObject spec, String type, String method, ProtoObject block) {
+//        System.out.println("register() " + spec + " " + type + " " + method + " " + block);
+        return register((String) spec.javaValue(), type, method, (ProtoBlock) block);
+    }
+
+    public Router register(String spec, String type, String method, ProtoBlock block) {
         Router router = routerFactory.create(spec, type, block);
         getRoutersForMethod(method).add(router);
         return router;
@@ -35,6 +41,7 @@ public class RouterRegistryImpl implements RouterRegistry {
     }
 
     public Router lookup(String path, String method) {
+//        System.out.println("lookup() " + path + " " + method);
         for (Router router : getRoutersForMethod(method)) {
             if (router.canHandleRequest(path)) return router;
         }
