@@ -25,7 +25,19 @@ Object < #Stout
     <varInsn: ALOAD, 4>.
     <varInsn: ALOAD, 3>.
     <methodInsn: INVOKEINTERFACE, 'st/redline/stout/RouterRegistry', 'lookup', '(Lst/redline/ProtoObject;Lst/redline/ProtoObject;)Lst/redline/stout/Router;'>.
-    <varInsn: ALOAD, 5>.
+    <varInsn: ALOAD, 6>.
     <varInsn: ALOAD, 3>.
     <methodInsn: INVOKEINTERFACE, 'st/redline/stout/Router', 'dispatchToBlock', '(Lst/redline/ProtoObject;Lst/redline/ProtoObject;)V'>.
+    <varInsn: ALOAD, 1>.
+
+- get: target do: aBlock
+    "register aBlock to be executed when a HTTP GET of target is received."
+    <varInsn: ALOAD, 1>.
+    <methodInsn: INVOKEVIRTUAL, 'st/redline/ProtoObject', 'javaValue', '()Ljava/lang/Object;'>.
+    <typeInsn: CHECKCAST, 'st/redline/stout/RouterRegistry'>.
+    <varInsn: ALOAD, 3>.
+    <ldcInsn: 'JSON'>.
+    <ldcInsn: 'GET'>.
+    <varInsn: ALOAD, 4>.
+    <methodInsn: INVOKEINTERFACE, 'st/redline/stout/RouterRegistry', 'register', '(Lst/redline/ProtoObject;Ljava/lang/String;Ljava/lang/String;Lst/redline/ProtoObject;)Lst/redline/stout/Router;'>.
     <varInsn: ALOAD, 1>.
