@@ -4,4 +4,6 @@ import: 'st.redline.stout.Stout'.
 Stout < #Web
 
 - initialize
-	super initialize
+    super initialize.
+    self get: '/' do: [Transcript show: 'here'; cr].
+
