@@ -4,6 +4,7 @@ Added support for nexted expressions, ie: (expression).
 Added primitive support for [] whileNil: and whileNotNil:.
 Added support for dispath in Stout.
 Changed call from INVOKEVIRTUAL to INVOKEINTERFACE. NoOp router being called.
+Added routing support for Stout. Can now invoke blocks based on route.
 
 25/11/2011 Changes
 
